# FC

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: 21ube0022_data_exclusions.json  baseline.yaml  default.yaml  mpc_params.yaml  paths.template.yaml  vehicle_params_bus.yaml
data/: README.md
docs/: CHEN_DYNAMIC_DISPATCH_FOUNDATION_RESULTS_2026-07-15.md  CHEN_EFFICIENCY_CURVE_AND_ONLINE_ALGORITHM_AUDIT_2026-07-15.md  CHEN_N_PLUS_ONE_FAULT_RESULTS_2026-07-15.md  CHEN_ROUTE_MOVED_2026-07-15.md  CODEX_CLI_HANDOFF_2026-07-12.md  CODEX_CLI_HANDOFF_2026-07-13.md  CODEX_CLI_HANDOFF_2026-07-14.md  CODEX_CLI_HANDOFF_2026-07-14_RELATIVE_HEALTH_AND_CHEN_ROUTE.md  CODEX_CLI_HANDOFF_2026-07-14_SIMPLIFIED_DEGRADATION_CHAIN.md  CODEX_CLI_HANDOFF_2026-07-15_CHEN_CURVE_AND_MTS_ROUTE.md  CODEX_CLI_HANDOFF_2026-07-15_CHEN_DYNAMIC_FOUNDATION.md  CORRECTIVE_AUDIT_RANDOM_LOAD_2026-07-14.md  DATA_IDENTITY_POWER_HEALTH_AUDIT_2026-07-13.md  EVIDENCE_GATED_EXECUTION_2026-07-14.md  HEALTH_OBSERVER_INTERFACE.md  MASTER_RESEARCH_PLAN.md  METHOD_FORMULATION.md  METHOD_STRATEGY_DECISION_2026-07-13.md  PAPER_ABSTRACT_CONCLUSION_DRAFT.md  PAPER_CLAIM_EVIDENCE_MATRIX.md  PAPER_CORE_REFERENCES.bib  PAPER_INTERNAL_REVIEW.md  PAPER_INTRO_RELATED_WORK_DRAFT.md  PAPER_METHODS_RESULTS_DRAFT.md  PROJECT_STATUS_BOARD.md  RELATIVE_HEALTH_WORKAROUND_AND_CHEN_PAPER_ROUTE_2026-07-14.md  RESULT_GUIDE_2026-07-14.md  SIMPLIFIED_DEGRADATION_RANDOM_LOAD_CHAIN_2026-07-14.md  STACK_HETEROGENEITY_OBSERVABILITY_2026-07-14.md  baseline_project_overview.md  baseline_runbook.md  literature_notes.md  (+4 more)
(+802 files in other folders)
