[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fc-power"
version = "0.1.0"
description = "Degradation-aware fuel-cell power management research pipeline"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "scipy", "scikit-learn", "matplotlib", "pyyaml", "h5py", "xgboost"]

[tool.setuptools.packages.find]
where = ["src"]
